--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,26 +1,42 @@
-@import "tailwindcss";
-
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* colors hsl */
+  --white: 223 24% 90%;
+  --white-300: 223 24% 80%;
+  --black: 223 20% 7%;
+  --black-300: 223 20% 10%;
+  --grey: 223 24% 24%;
+  --blue: 223 88% 50%;
+  --light-blue: 223 98% 60%;
+  --pink: 290 68% 58%;
+
+  /* utils */
+  --max-width: 1456px;
+  --radius-s: 6px;
+  --radius-m: 8px;
+  --radius-l: 16px;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+::selection {
+  background-color: hsl(var(--blue) / 0.9);
+  color: hsl(var(--white));
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  min-height: 100vh;
+  font-family: var(--font-source-sans);
+  color: hsl(var(--white));
+  background: hsl(var(--black-300));
+  overflow-x: hidden;
+}
+h1{
+  font-size: 40px;
 }
