--- a/frontend/src/_styles/auth/login.module.css
+++ b/frontend/src/_styles/auth/login.module.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  padding: 10px;
 }
 
 .card {
@@ -75,7 +76,6 @@
 
 .passwordWrapper input {
   flex: 1;
-  padding-right: 70px; /* space for the button */
 }
 
 .toggleBtn {
