add product completed

--- a/frontend/src/_styles/manage/addProduct.module.css
+++ b/frontend/src/_styles/manage/addProduct.module.css
@@ -1,8 +1,8 @@
 .container {
   max-width: 700px;
-  margin: 2rem auto;
   padding-block: 84px;
-
+  margin: auto;
+  min-height: 100vh;
   color: #fff;
 }
 
